--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "test": "node test.js"
   },
-  "author": "Thomas Deegan",
+  "author": {
+    "name" : "Thomas Deegan",
+    "email" : "tadeegan@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tadeegan/locale-currency.git"
+  },
   "license": "BSD-2-Clause",
   "dependencies": {
   }
