Add typescript typings

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "locale-currency",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A map of i18n country codes to ISO 4217 currency codes.  Originally generated from the output of java.util.Currency.getInstance(locale)",
   "main": "index.js",
+  "types": "./index.d.ts",
   "scripts": {
     "test": "node test.js"
   },
